--- a/practics_ollama.ipynb
+++ b/practics_ollama.ipynb
@@ -60,18 +60,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "can only concatenate str (not \"set\") to str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 22\u001b[0m\n\u001b[0;32m     20\u001b[0m result \u001b[38;5;241m=\u001b[39m chain\u001b[38;5;241m.\u001b[39minvoke({\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcontext\u001b[39m\u001b[38;5;124m\"\u001b[39m: {context}, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mquestion\u001b[39m\u001b[38;5;124m\"\u001b[39m: {question}})\n\u001b[0;32m     21\u001b[0m context \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mMe: \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m question \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mAI: \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m result\n\u001b[1;32m---> 22\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mMe: \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m{\u001b[49m\u001b[43mresult\u001b[49m\u001b[43m}\u001b[49m \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mResponse: \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m result \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m) \n",
-      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"set\") to str"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Me: Hello llama. I am abdul mukit\n",
+      "Response: Hello Abdul Mukit, how can I assist you today?\n",
+      "\n",
+      "Me: my name is Abdul mukit\n",
+      "Response: Hello Abdul Mukit, it's nice to meet you. You've already shared that information with me when we greeted each other earlier. Is there anything else you'd like to discuss or ask for assistance with?\n",
+      "\n",
+      "Me: How many legs a cow has?\n",
+      "Response: Hello Abdul Mukit, it seems you're looking for some general knowledge about cows. Cows are mammals and, as such, they have four legs. Is there anything else I can help you with regarding this topic or would you like to ask something else?\n",
+      "\n",
+      "Me: What is the country of Bangladesh?\n",
+      "Response: Hello Abdul Mukit, it seems you're looking for some general knowledge about a different topic. The country of Bangladesh is located in South Asia and consists of the eastern part of the Indian subcontinent. It gained independence from Pakistan on December 16, 1971. Is there anything else I can help you with regarding this topic or would you like to ask something else?\n",
+      "\n"
      ]
     }
    ],
